--- a/src/views/site/user.pug
+++ b/src/views/site/user.pug
@@ -4,5 +4,5 @@ block content
   .index-page
     include ./../includes/header
     .content
-      p #{userData.username}
+      p #{userData.name}
     include ./../includes/footer
