--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -6,6 +6,7 @@ html {
 }
 body {
   height: 100%;
+  font-family: "Segoe UI",Segoe,Tahoma,Arial,Verdana,sans-serif;
 }
 a {
   text-decoration: none;
@@ -73,7 +74,6 @@ a {
  */
 .header {
   height: 48px;
-  line-height: 100%;
   background-color: #f5f5f5;
 }
 .header-link {
@@ -104,6 +104,9 @@ a {
 }
 .header-logo .header-link i {
   width: 16px;
+}
+.header-logo .header-link span {
+  font-size: 16px;
 }
 .header-menu {
   height: 100%;
@@ -145,16 +148,15 @@ a {
   padding: 0 16px;
   line-height: 48px;
   font-size: 14px;
-  color: #333333;
+  color: #666666;
+  border-top: 1px solid #eeeeee;
 }
 .footer-copyright {
   margin-right: 16px;
-  float: left;
 }
 .footer-locale-link {
   font-size: 14px;
-  color: #333333;
-  float: left;
+  color: #666666;
 }
 .footer-locale-link i {
   width: 16px;
