--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -5,7 +5,7 @@ html
     meta(name="viewport" content="width=device-width,height=device-height,user-scalable=no,initial-scale=1,minimum-scale=1, maximum-scale=1")
     title= title ? title + ' - Shulive Task' : 'Shulive Task'
     link(rel="shortcut icon" href="/static/img/favicon.ico")
-    link(rel='stylesheet', href='/static/css/icomoon.css')
+    link(rel='stylesheet', href=staticHost+'/common/css/icomoon.css')
     link(rel='stylesheet', href='/static/css/normalize.css')
     link(rel='stylesheet', href='/static/css/common.css')
     link(rel='stylesheet', href='/static/css/pages.css')
