--- a/src/assets/css/icomoon.css
+++ b/src/assets/css/icomoon.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('./../fonts/icomoon.eot?ebowmo');
-  src:  url('./../fonts/icomoon.eot?ebowmo#iefix') format('embedded-opentype'),
-    url('./../fonts/icomoon.ttf?ebowmo') format('truetype'),
-    url('./../fonts/icomoon.woff?ebowmo') format('woff'),
-    url('./../fonts/icomoon.svg?ebowmo#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?61fnb5');
+  src:  url('../fonts/icomoon.eot?61fnb5#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?61fnb5') format('truetype'),
+    url('../fonts/icomoon.woff?61fnb5') format('woff'),
+    url('../fonts/icomoon.svg?61fnb5#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,6 +24,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-apps:before {
+  content: "\e903";
+}
+.icon-menu:before {
+  content: "\e902";
+}
 .icon-shulive:before {
   content: "\e900";
 }
@@ -47,4 +53,7 @@
 }
 .icon-github:before {
   content: "\eab0";
+}
+.icon-home:before {
+  content: "\e901";
 }
