--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -31,9 +31,9 @@ a {
 /* ======================================================================= */
 /* ======================================================================= */
 
-/* Dropdown
- * ==========================================================================
- */
+
+/* ================================================================ */
+/* Dropdown - start =============================================== */
 .sl-dropdown {
   height: 100%;
   position: relative;
@@ -65,9 +65,8 @@ a {
 .sl-dropdown-right {
   right: 0;
 }
-
-/* ======================================================================= */
-/* ======================================================================= */
+/* Dropdown - end ================================================= */
+/* ================================================================ */
 
 /* Header
  * ==========================================================================
